feat: modified title

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -8,7 +8,7 @@
 
 \school{\unibo}
 \programme{Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche}
-\title{Static Analysis for Novel Programming paradigms via Compiler Plugins}
+\title{Static Analysis of Aggregate Programs through Compiler Plugins}
 \author{Francesco Magnani}
 \date{\today}
 \subject{Software Process Engineering}
