--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1349,18 +1349,143 @@ therefore avoiding the need to visit the tree in a more complex way.
 %
 We can also create utility functions that call other visitors to extract
 information useful for the checker or another visitor. Making this structure 
-modular and extensible is the key to the success of this approach.
+modular and extensible is key for the success of this approach.
 
 \subsection{Pattern 5: complex aggregate operations in loops} \label{sec:p5}
 
 The case of aggregate operations in loops was already treated in \cref{sec:p2},
-but the pattern was not completely covered, (intentionally) presenting the cases
-in its description in a non-complete way. In particular, a special usage case
-was omitted, here called the case of \textbf{delegated functions}. 
+but the pattern was not completely covered, (intentionally) presenting the
+pattern's description in a non-complete way. In particular, a special usage
+case was omitted, here called the case of \textbf{delegated functions}. 
 %
 In this case, the construct is not directly called inside the loop, but it is
-\emph{delegated to another function that is called inside the loop}. 
+\emph{delegated to another function that is called inside the loop}. This
+function is not necessarily a nested function, as in the case already seen in
+\cref{sec:p2}, but it can be a function that is defined elsewhere in the code:
+this will be called the \emph{delegated function} or simply the \emph{delegate}.
+In order to contain aggregate calls, the delegate must have a parameter of type
+\lstinline{Aggregate} to use as a receiver for the aggregate constructs (if
+instead the delegate would have an explicit receiver of type
+\lstinline{Aggregate}, in fact, the pattern would be trivially detected by the
+Pattern 2 checker, as the delegate would appear as an aggregate construct
+itself).
+%
+Just like before, this case adds surprising complexity to the pattern even with
+just a small additional constraint to its definition. The plethora of possible
+cases that can be captured in the code by this pattern is quite large, and some
+examples are shown in \cref{lst:p5-example}. Seeing the second example should
+give an idea of how many possible code variations are related to this pattern,
+and why this additional constraint has been treated as a separated pattern with
+respect to Pattern 2.
 
+\lstinputlisting[
+  float, 
+  language=Kotlin, 
+  label={lst:p5-example},
+  caption={Examples of Pattern 5 detection in code, with the case of delegated
+  functions}
+]{listings/P5Example.kt}
+
+\subsubsection{Formal description}
+
+Given a looping construct (like the ones already seen for Pattern 2) and a
+declared function, here called \emph{delegate}, whose parameters contain one of
+type \lstinline{Aggregate} and whose body contains an aggregate construct call,
+the pattern is satisfied when \emph{delegate} is called inside the loop or in a
+chain of other function calls that ends with a call inside the loop, and neither
+\emph{delegate} nor the functions in the chain contain an \lstinline{alignedOn}
+operation wrapping one of the calls.
+
+\subsubsection{Design and Implementation}
+
+To implement this pattern, a new condition will be added to the checker seen in
+\cref{lst:p2-checker} that will handle the case of delegated functions. The new
+condition will perform the same checks as the previous one, but instead of
+checking if the function call being examined is an aggregate one, it will check
+if one of its parameters are of type \lstinline{Aggregate}. To do this a new
+utility function is implemented: \lstinline{hasAggregateParameter}, shown in
+\cref{lst:p5-utility}.
+
+\begin{lstlisting}[
+  float, 
+  language=Kotlin,
+  label={lst:p5-utility},
+  caption={Utility function to check if a function call has an aggregate parameter}
+]
+fun FirFunctionCall.hasAggregateArgument(): Boolean =
+  getArgumentsTypes()?.any {
+      it.classId == ClassId.topLevel(AGGREGATE_CLASS_FQ_NAME.toFqNameUnsafe())
+  } == true
+\end{lstlisting}
+
+This uses the \lstinline{getArgumentsTypes} and \lstinline{toFqNameUnsafe}
+extension methods that have been implemented for the job (and are omitted for
+brevity). Once this condition is satisfied, the visitor will be called to
+inspect the delegate function and check if it contains an aggregate construct
+call or a call to another function that contains an aggregate construct call
+(possibly in a chain of calls). \textbf{Note:} we cannot use the code already
+implemented for Pattern 2 for checking the presence of the \lstinline{alignedOn}
+operation, since its call could be in a different function that is called inside
+the delegate and that is not directly one of the \emph{containing elements} of
+the aggregate construct call. For this reason, the visitor will be used also for
+this purpose.
+
+To implement this visitor, we need a way to visit the function declaration
+associated with the function call that is being visited. Thanks to Kotlin API,
+this can be done like seen in \cref{lst:p5-declaration}.
+%
+\begin{lstlisting}[
+  float, 
+  language=Kotlin,
+  label={lst:p5-declaration},
+  caption={Simple utility function to get the declaration of a function call}
+]
+@OptIn(SymbolInternals::class)
+fun FirFunctionCall.getDeclaration(): FirSimpleFunction? =
+  calleeReference.toResolvedFunctionSymbol()?.fir as? FirSimpleFunction
+\end{lstlisting}
+%
+The \lstinline{@OptIn} is necessary in order to access the \lstinline{fir}
+field. Once this is done, we need to visit the function declaration and check
+its body for the pattern presence. In addition, however, we also need to be
+careful to detect \emph{nested function declarations}, and for this reason 
+a \lstinline{functionCounter} variable is used to keep track of the nesting
+level of the function declarations. 
+%
+The other elements we need to visit are the function calls contained in the body
+of the function. The only functions we are interested in are of two types:
+
+\begin{enumerate}
+  \item \textbf{Aggregate function calls}: function calls that require alignment
+  or \lstinline{alignedOn} operations;
+  \item \textbf{Function calls with aggregate parameter (i.e., delegates)}: this 
+  functions could recursively contain dangerous function calls, so are targeted 
+  by other checks
+\end{enumerate}
+
+In the first case, we check if the function call is an alignment operation, and if
+so we accept its anonymous function parameter with the visitor keeping track that 
+we are inside an alignment (i.e., so other aggregate operations are considered safe
+within it). If the aggregate function is not an alignment operation and we are not
+\emph{inside an alignment or nested function}, the pattern is detected.
+
+In the second case we simply instantiate another visitor and recursively visit the
+function call in question, checking if the pattern is detected in the delegate.
+
+The implementation just explained is summarized in \cref{lst:p5-visitor}.
+Although the code is still short like for the other visitors, in this case we
+need to take \emph{multiple visiting call} of the same method and even
+\emph{recursive visiting} with another visitor into consideration. Finally,
+we will approach the pattern that was considered the most complex to detect,
+where multiple types of visitors were used together to inspect the code.
+
+\lstinputlisting[
+  float, 
+  language=Kotlin, 
+  label={lst:p5-visitor},
+  caption={Implementation of the Pattern 5 Visitor}
+]{listings/P5Visitor.kt}
+ 
 \subsection{Pattern 6: improper Evolve construct usage}
 
 
